Abgabe Peer Review

--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -7,3 +7,15 @@
 %         \item The scope and goal of this paper.
 %     \end{itemize}
 % \end{abstract}
+
+\begin{abstract}
+    \textbf{Abstract} \ \ The complexity of modern software systems is constantly growing.
+    This requires new ways to be found to better manage large scale software systems.
+    Self-Adaptive Systems which autonomously manage themselves using well-defined rules
+    are a solution to this problem.
+    Even tough these systems are able to adapt themselves,
+    they struggle with unpredicted changes in their context.
+    This can be solved by using Optimization Approaches for Self-Adaptive Systems which can optimize these systems.
+    There are already many Optimization Approaches, but no way to classify them.
+    This paper proposes a classification for Optimization Approaches for Self-Adaptive Systems.
+\end{abstract}
