--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -41,7 +41,7 @@ In order to achieve this task of autonomous self-management, the system has to b
 \end{itemize}
 
 To model these abilities Kephart and Chess developed
-the MAPE-K (Monitor-Analyze-Plan-Execute with Knowledge) feedback loop \cite*{VisionOfAutonomicComputing} in Figure \ref{fig:MAPEK}.
+the MAPE-K (Monitor-Analyze-Plan-Execute with Knowledge) feedback loop \cite*{VisionOfAutonomicComputing} shown in Figure \ref{fig:MAPEK}.
 \paragraph*{Monitor} First the system has to monitor itself and its environment. 
 \paragraph*{Analyze} The data, gathered by the monitoring step, has to be analyzed to detect changes and faults.
 \paragraph*{Plan} If the analyzing step detects, that an adaptation is necessary, 
@@ -63,8 +63,6 @@ because of their ability to adapt themselves.
 %     \item 
 % \end{itemize}
 
-% TODO: What are the limits of Self-Adaptive Systems?}
-% TODO: The need for optimizing Self-Adaptive Systems}
 While Self-Adaptive Systems are better at handling more complex systems,
 human operators are better at handling uncertainty.
 Because the rules and policies, used by Self-Adaptive Systems,
@@ -78,10 +76,10 @@ when the environment changes in ways that were not predicted by developers durin
 
 From this the need for optimizations for Self-Adaptive Systems arises.
 While there already are many Optimization Approaches for Self-Adaptive Systems,
-there is no classification for these Optimization Approaches.
+there is no classification for them.
 Because of this, the existing Optimization Approaches can not be easily compared
 and it is difficult to identify areas that require further research.
-This paper aims to provide such a classification for Optimization Approaches for Self-Adaptive Systems
+This paper aims to provide such a classification for Optimization Approaches for Self-Adaptive Systems.
 \newline
 \par
 
@@ -90,6 +88,6 @@ To derive a classification for Optimization Approaches for Self-Adaptive Systems
 the second chapter will first explain how Self-Adaptive Systems are classified
 using three different approaches.
 Based on these approaches, a classification for Optimization Approaches for Self-Adaptive Systems will be derived
-and explained in the third chapter.
+and proposed in the third chapter.
 The fourth chapter applies the classification to some existing Optimization Approaches
-and compares them using the classification.
+and compares them using the proposed classification.
