--- a/seminar.tex
+++ b/seminar.tex
@@ -100,7 +100,7 @@
 	
 % . ML usage paper: Bezug auf die dort proposed classification?
 
-- Introduction ist gut
+% - Introduction ist gut
 
 \input{sections/abstract.tex}
 \input{sections/introduction.tex}
@@ -114,6 +114,7 @@
 %% --------------------
 
 %% Add entry to the table of contents for the bibliography
+\newpage
 \printbibliography[heading=bibintoc]
 
 \end{document}
